--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<version>6.2.3.Final</version>
 			<type>pom</type>
 		</dependency>
+		<dependency>
+			<groupId>org.modelmapper</groupId>
+			<artifactId>modelmapper</artifactId>
+			<version>2.4.4</version>
+		</dependency>
 	</dependencies>
 
 	<build>
